tests/checker/diagnostics/0025_core_plus_bool_03.ml.infer.expected
File "0025_core_plus_bool_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0025_core_plus_bool_03 is not a valid module name.

File "0025_core_plus_bool_03.ml", line 2, characters 20-24:
2 | let bad : int = 1 + true
                        ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
