tests/checker/diagnostics/0025_core_plus_bool_03.ml
let ( + ) (x : int) (y : int) : int = x
let bad : int = 1 + true
